--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@
             </p>
           </div>
         </div>
-        <div class="article">
+        <!-- <div class="article">
           <h3 class="article-title">Check out our latest article</h3>
           <div class="article-line"></div>
           <div class="article-cards">
@@ -187,7 +187,7 @@
               <div class="acrticle-cards-card-area"></div>
             </div>
           </div>
-        </div>
+        </div> -->
       </main>
     </div>
   </body>
